objects/ssot__EngagementParticipantAppRole__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementParticipantRole__c</fullName>
        <label>Engagement Participant Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Participant App Role Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplication__c</fullName>
        <label>Software Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectName__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009520875_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementParticipantAppRole_Partici_rel</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>EngagementParticipantAppRole_Partici_rel</relationshipLabel>
        <relationshipName>rel_1702009520875_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009521425_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementParticipantAppRole_Partici_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>EngagementParticipantAppRole_Partici_rel</relationshipLabel>
        <relationshipName>rel_1702009521425_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009521692_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementParticipantAppRole_Partici_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>EngagementParticipantAppRole_Partici_rel</relationshipLabel>
        <relationshipName>rel_1702009521692_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>